fixed voting btns not showing on smaller screens

--- a/spotifyQ/static/spotifyQ/css/owner.css
+++ b/spotifyQ/static/spotifyQ/css/owner.css
@@ -175,7 +175,7 @@ th, td {
 
 .vote {
     vertical-align: middle;
-    width: 118px;
+    width: 120px;
     padding: 5px 30px 5px 0px;
     /*background-color: #999999;*/
 }
